@@ -1,0 +1,10 @@
+
+#ifndef _MWMHINTS_
+#define _MWMHINTS_
+
+#include <X11/Xlib.h>
+#include "types.h"
+
+extern void ApplyMWMHints(Display *dpy, TwmWindow *twmWin);
+
+#endif /* include guard */
